--- a/Concierge Docs/DoortoFirstVisit.html
+++ b/Concierge Docs/DoortoFirstVisit.html
@@ -31,7 +31,7 @@
         <li>Complete all necessary fields</li>
         <li>Reply to patient using preferred method of communication <a href="./PhoneScriptC1.html" target="_blank">[Phone Script]</a><a href="./EmailTemplateC1.html"  target="_blank">[E-mail Template]</a></li>
         <img src="../Resources/Assets/Concierge Images/Door to First Visit Images/unnamed.png" />
-        <p>Edit the Name of the provider. Include the 3 next available options in schedule (date and time). SEND </p>
+        <p>Edit the Name of the provider. Include the 3 next available options in schedule (date and time). Send. </p>
     </ol>
     <div>
         <p>Useful links for patient chart management to CHR documentation:</p>
@@ -41,6 +41,7 @@
             <a href="https://intercom.help/inputhealth/en/articles/1465473-customizing-the-patient-dashboard" target="_blank"><li>Customizing the patient dashboard</li></a>
             <a href="https://help.inputhealth.com/en/articles/4457482-customizing-the-patient-data-header" target="_blank"><li>Customizing the patient data header</li></a>
             <a href="https://intercom.help/inputhealth/en/articles/3273042-viewing-and-updating-entries-in-the-patient-data-section" target="_blank"><li>Viewing and updating entries in the patient data</li></a>
+            <a href="https://help.inputhealth.com/en/articles/1253479-creating-patient-status-tags" target = "_blank"><li>Adding an indentifying tag to a patient file</li></a>
         </ul>
     </div>
 </div>
@@ -55,14 +56,13 @@
     <h3>4. Concierge - Pre-Visit Paperwork (Estimated Time: 5-10 minutes)</h3>
     <ol>
         <li>Obtain timeslots for initial visit (CHR inbox or phone call)</li>
-        <li>Book the initial appointment by selecting: <br> 
-            a) Time slot <br>
-            b) Choose "Physical" (So the patient does not receive CHR lin, as we are using Google Meet for the moment) <br> 
-            c) Appointment type "Concierge" <br>
-            d) Choose "Presenting Issue" as "Concierge Initial Visit" <br>
+        <li>Book the initial free NP Evaluation Appointment by selecting: <br> 
+            a) Time slot: 15 minutes <br>
+            b) Choose "Virtual" (So the patient does receive CHR link)<br> 
+            c) Appointment type "NP - Free Eval" <br>
+            d) Choose "Presenting Issue" as "NP - Free Eval" <br>
              from the "Calendar" section of the CHR platform:</li>
         <img src="../Resources/Assets/Concierge Images/Door to First Visit Images/New patient scheduling calendar.png" />
-        <li>Create a Google Calendar meeting in Bravella Calendar. Authorize Google Meet. Add patient email as the invited guest so they receive the link.</li>
         <img src="../Resources/Assets/Concierge Images/Door to First Visit Images/email2.png" />
         <li>Send separate email with the onboarding package using HelloSign <a href="./HelloSignLegalProcess.html" target="_blank">"Application Form" and "Terms and Conditions"</a></li>
     </ol>
@@ -75,7 +75,7 @@
 </div>
 <div>
     <h3>6. Concierge -  First Visit (C1)</h3>
-    <p>If patient has not filled out the legal documents, this must be reviewed at the time of the first meeting</p>
+    <p>3 days after sending the link to the legal documents, above, please verify the patient has completed the T and C legal documents signature process. This must be reviewed prior to the time of the first meeting</p>
     <p><a href="./ConciergeFirstVisit.html" target="_blank">[Go To First Visit]</a></p>
 </div>
 
