--- a/Concierge Docs/CHRBasics.html
+++ b/Concierge Docs/CHRBasics.html
@@ -49,7 +49,8 @@
             <input type="checkbox"> Messaging: <br> 
             <a href="https://help.inputhealth.com/en/articles/1259449-creating-and-sending-messages-to-users" target="_blank"> Sending Messages to Clinic Members</a> <br>  
             <a href="https://help.inputhealth.com/en/articles/1461593-sending-messages-to-patients" target="_blank"> Sending Messages to Patients</a> <br>  
-            <a href="https://intercom.help/inputhealth/en/articles/5698674-instant-chat" target="_blank">  Instant Chat </a> <br>       
+            <a href="https://intercom.help/inputhealth/en/articles/5698674-instant-chat" target="_blank">  Instant Chat </a>
+            <a href="https://help.inputhealth.com/en/articles/1253479-creating-patient-status-tags" target = "_blank"><li>Adding an indentifying tag to a patient file</li></a> <br>       
         </li>
         <li>
             <p>Using the Admin notes section to track progress with tasks on a given patient</p>
