concierge task list update

--- a/Concierge Docs/ConciergeToDo.html
+++ b/Concierge Docs/ConciergeToDo.html
@@ -10,23 +10,27 @@
     <button class="homebutton"><a href="../index.html">Home</a></button>
     <h1>Concierge To Do List</h1>
     <h2>Authors: Adam Hofmann</h2>
-    <h2>Last Update: Dec 16 2024</h2>
+    <h2>Last Update: Mar 20 2025</h2>
 
-    <h1>Daily</h1>
-    <ul>
-        <li>Inbox Window => Filter Icon => Labs => Messages => Qnaire responses for their team. Review.</li>
-        <li>Review Daily Labs for Urgent Values for their NP</li>
-        <li>Review Personal CHR and Bravella Inboxes for correspondence from patients. Respond</li>
-        <li>Check "requested appointments" and confirm them in CHR schedule view</li>
+    <h1>Daily - Clinical Side</h1>
+    <ol>
+        <li>Review and Respond to All Messages in the CHR Inbox</li>
+        <li>Review Gmail Inbox and Respond</li>
+        <li>Go to the daily schedule in CHR for the day prior, click on and read each encounter note to understand plans and needs for each patient.</li>
+        <li>Determine if all assigned health care professionals have given at least 2 weeks of clinic slots going forward. If not, reach out to them by email to remind them to update their schedules.</li>
+        <li>End of day - send reminder email out to assigned healthcare providers if they have patients booked for the following day.</li>
         <li>Check outstanding <a href="./HelloSignLegalProcess.html" target="_blank">HelloSign legal doc</a> signatures pending. If greater than 72h send follow up email to patient.</li>
-    </ul>
+        <li>Ensure patient management task list is updated for each patient and that "past due" actions are up to date</li>
+    </ol>
     <h1>Weekly</h1>
-        <p>Sunday Evening - Verify, for all providers (filtered) that all Qnaires have been completed. If outstanding, write standard contact to patient to remind uncompleted Qnaire patients to go ahead and complete.</p>
+        <ol>
+            <li>Friday Afternoon - Verify, for all providers (filtered) that all Qnaires have been completed. If outstanding, write standard contact to patient to remind uncompleted Qnaire patients to go ahead and complete.</li>
+        </ol>
         <img src="../Resources/Assets/Concierge Images/Questionnaire uncompleted.png" />
     <h1>Monthly</h1>
-    <ul>
-        <li>Check that all patients are up to date in payments (day after automatic pay cycle, eg: 11th day of the month)</li>
-    </ul>
+    <ol>
+        <li>Check that all assigned patients are up to date in payments (day after automatic pay cycle, eg: 11th day of the month)</li>
+    </ol>
     <h1>Quarterly</h1>
     <h1>Annually</h1>
 
