--- a/Concierge Docs/DoortoFirstVisit.html
+++ b/Concierge Docs/DoortoFirstVisit.html
@@ -65,6 +65,7 @@
         <img src="../Resources/Assets/Concierge Images/Door to First Visit Images/New patient scheduling calendar.png" />
         <img src="../Resources/Assets/Concierge Images/Door to First Visit Images/email2.png" />
         <li>Send separate email with the onboarding package using HelloSign <a href="./HelloSignLegalProcess.html" target="_blank">"Application Form" and "Terms and Conditions"</a></li>
+        <li></li>
     </ol>
 </div>
 <div>
@@ -74,9 +75,9 @@
     </ol>
 </div>
 <div>
-    <h3>6. Concierge -  First Visit (C1)</h3>
+    <h3>6. NP Free Eval, First Visit</h3>
     <p>3 days after sending the link to the legal documents, above, please verify the patient has completed the T and C legal documents signature process. This must be reviewed prior to the time of the first meeting</p>
-    <p><a href="./ConciergeFirstVisit.html" target="_blank">[Go To First Visit]</a></p>
+    <!-- <p><a href="./ConciergeFirstVisit.html" target="_blank">[Go To First Visit]</a></p> -->
 </div>
 
 </main>
