mods to concierge daily task list

--- a/Concierge Docs/ConciergeToDo.html
+++ b/Concierge Docs/ConciergeToDo.html
@@ -25,13 +25,17 @@
     <h1>Weekly</h1>
         <ol>
             <li>Friday Afternoon - Verify, for all providers (filtered) that all Qnaires have been completed. If outstanding, write standard contact to patient to remind uncompleted Qnaire patients to go ahead and complete.</li>
+            <li>Attend weekly group meeting</li>
+            
         </ol>
-        <img src="../Resources/Assets/Concierge Images/Questionnaire uncompleted.png" />
+        <img src="../Resources/Assets/Concierge Images/Concierge - Daily Weekly Monthly Task List/Questionnaire uncompleted.png"/>
     <h1>Monthly</h1>
     <ol>
         <li>Check that all assigned patients are up to date in payments (day after automatic pay cycle, eg: 11th day of the month)</li>
+        <li>Quality Improvement - reach out to team member providers and ask for feedback, via email</li>
     </ol>
     <h1>Quarterly</h1>
+        <li>For future implemenetation - Quality Improvement - organize a mortality and morbidity conference</li>
     <h1>Annually</h1>
 
 </main>
