--- a/Concierge Docs/DoortoFirstVisit.html
+++ b/Concierge Docs/DoortoFirstVisit.html
@@ -65,6 +65,7 @@
         <img src="../Resources/Assets/Concierge Images/Door to First Visit Images/New patient scheduling calendar.png" />
         <img src="../Resources/Assets/Concierge Images/Door to First Visit Images/email2.png" />
         <li>Send separate email with the onboarding package using HelloSign <a href="./HelloSignLegalProcess.html" target="_blank">"Application Form" and "Terms and Conditions"</a></li>
+        <li>Ensure that the patient has our online pharmacy (Hillary's Pharmacy) as the default pharmacy in CHR (<a href="https://help.inputhealth.com/en/articles/5170925-viewing-patient-charts">How to change patient pharmacy in CHR</a></li>
         <li></li>
     </ol>
 </div>
